--- a/qgroundcontrol.qrc
+++ b/qgroundcontrol.qrc
@@ -157,6 +157,9 @@
         <file>files/images/firmware/Y6_off.png</file>
         <file>files/images/firmware/Y6_on.png</file>
         <file>files/images/mavs/frames-h.png</file>
+        <file>files/ardupilotmega/images/apm2.5.jpg</file>
+        <file>files/ardupilotmega/images/maggps.png</file>
+        <file>files/ardupilotmega/images/px4.jpg</file>
     </qresource>
     <qresource prefix="/general">
         <file alias="vera.ttf">files/styles/Vera.ttf</file>
