--- a/src/ui/configuration/ArduRoverPidConfig.ui
+++ b/src/ui/configuration/ArduRoverPidConfig.ui
@@ -18,12 +18,12 @@
     <rect>
      <x>10</x>
      <y>10</y>
-     <width>211</width>
-     <height>31</height>
+     <width>162</width>
+     <height>24</height>
     </rect>
    </property>
    <property name="text">
-    <string>&lt;h2&gt;ArduRover Pids&lt;/h2&gt;</string>
+    <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:x-large; font-weight:600;&quot;&gt;APM:Rover PIDs&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
    </property>
   </widget>
   <widget class="QWidget" name="gridLayoutWidget">
@@ -31,8 +31,8 @@
     <rect>
      <x>60</x>
      <y>90</y>
-     <width>504</width>
-     <height>419</height>
+     <width>699</width>
+     <height>549</height>
     </rect>
    </property>
    <layout class="QGridLayout" name="gridLayout">
