Checkboxes are now a bit more visible in indoor mode

--- a/files/styles/style-indoor.css
+++ b/files/styles/style-indoor.css
@@ -18,6 +18,7 @@ QGroupBox {
 QCheckBox {
     /*background-color: #252528;*/
     color: #DDDDDF;
+    border: 1px solid #777777;
 }
 
 /*QCheckBox::indicator {
